--- a/src/components/1. Title Page/TitlePage.css
+++ b/src/components/1. Title Page/TitlePage.css
@@ -38,16 +38,27 @@
 
 .sub-title {
   font-size: 1.8em;
-  color: #555;
-  margin-bottom: 30px;
-  font-weight: normal;
+  color: #666;
+  font-weight: 500;
+  font-style: italic;
   word-wrap: break-word;
 }
 
-.date {
-  font-size: 1.1em;
+.examiner {
+  font-family: 'EB Garamond', serif;
+  font-size: 1.6em;
   color: #666;
-  margin-bottom: 10px;
+  font-weight: bold;
+  word-wrap: break-word;
+  margin: 0px;
+}
+
+.date {
+  font-family: 'EB Garamond', serif;
+  font-size: 1.4em;
+  color: #666;
+  font-weight: bold;
+  margin-top: 10px
 }
 
 .copyright {
